Fix too small font sizes

--- a/content/themes/light/sass/layout/_general.scss
+++ b/content/themes/light/sass/layout/_general.scss
@@ -148,7 +148,7 @@ body {
         }
 
         ul {
-          font-size: 1rem;
+          font-size: 1.4rem;
         }
       }
 
@@ -227,7 +227,7 @@ body {
       th,
       td,
       tr {
-        font-size: 1rem;
+        font-size: 1.4rem;
       }
 
       .poispaalta {
