--- a/content/themes/light/sass/views/_blog.scss
+++ b/content/themes/light/sass/views/_blog.scss
@@ -239,7 +239,7 @@ h3.author {
 
   h4,
   p {
-    font-size: 1rem;
+    font-size: 1.4rem;
     color: #777;
     font-weight: 400;
     width: 60%;
@@ -252,7 +252,7 @@ h3.author {
 
   .next,
   .prev {
-    font-size: 1rem;
+    font-size: 1.4rem;
   }
 
   .next {
